"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-09-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-68-chpsim-09-11:
	  Finished first draft of CHPSIM_BULK_ALLOCATE_GLOBAL_EVENTS, 
		still disabled (but at least compiles), 
		tests show no regressions.  Next, flip the switch and pray...


	* HACKT-00-01-04-main-00-81-68-chpsim-09-10:
	  Perm'd DUMP_CHPSIM_PARENT_CONTEXT (sim/chpsim/devel_switches.h)


2007-09-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-68-chpsim-09-09:
	  Made more cut marks around CHPSIM_BULK_ALLOCATE_GLOBAL_EVENTS
		and added provisional code to switch over, but still disabled.
	  Planned out some changes to chpsim/State and StateConstructor.


2007-09-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-68-chpsim-09-08:
	  Object/state_manger: make_process_dump_context function reuse.
	  sim/chpsim/{Event,State}: started sketching out 
		CHPSIM_BULK_ALLOCATE_GLOBAL_EVENTS (new switch, disabled)
		use make_process_dump_context, delete dupe code


	* HACKT-00-01-04-main-00-81-68-chpsim-09-07:
	  Minor revision:
	  Print do_while_loops as selection events (either loop or exit)
		in pretty-printing output.  
	  Print null events with multiple predecessors as 'join'.
	  Much more readable now... test cases updated accordingly.


	* HACKT-00-01-04-main-00-81-68-chpsim-09-06:
	  Object/lang/CHP_footprint.cc: impl. dump_struct_dot, more limited
		than original version from sim/chpsim/State.cc.
	  process_type_reference: lookup_footprint convenience method.
	  main/chpsim.cc: support for -t and -T to specify a process-type
		to operate on instead of the top-level instances.
	  Test suite: updated remaining chpsim tests with updated
		definition footprint dumps of chp event graphs.  


2007-09-03	David Fang		<fangism@users.sourceforge.net>
